[package]
name = "github-scbot"
version = "0.9.1"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2018"

[dependencies]
github-scbot-conf = { path = "../github_scbot_conf" }
github-scbot-database = { path = "../github_scbot_database" }
github-scbot-logic = { path = "../github_scbot_logic" }
github-scbot-server = { path = "../github_scbot_server" }
github-scbot-tui = { path = "../github_scbot_tui" }
github-scbot-types = { path = "../github_scbot_types" }
actix-rt = "1"
dialoguer = "0.7.1"
owo-colors = "1.2"
sentry-core = "0.21.0"
sentry-eyre = { path = "../sentry_eyre" }
stable-eyre = "0.2"
structopt = "0.3"
thiserror = "1.0"
