[package]
name = "github-scbot-api"
version = "0.1.0"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2018"

[dependencies]
github-scbot-core = { path = "../github_scbot_core" }
github-scbot-types = { path = "../github_scbot_types" }
chrono = { version = "0.4.19", features = ["serde"] }
http = "0.2"
jsonwebtoken = "7.2.0"
octocrab = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_plain = "0.3.0"
thiserror = "1.0"
tracing = "0.1"
heck = "0.3.2"
