[package]
name = "github-scbot-api"
version = "0.1.0"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2018"

[dependencies]
github-scbot-conf = { path = "../github_scbot_conf" }
github-scbot-crypto = { path = "../github_scbot_crypto" }
github-scbot-types = { path = "../github_scbot_types" }
chrono = { version = "0.4.19", features = ["serde"] }
heck = "0.3.2"
http = "0.2"
octocrab = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_plain = "0.3.0"
thiserror = "1.0"
tracing = "0.1"
reqwest = "0.10.9"
