[package]
name = "github-scbot-api"
version = "0.10.2"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2018"

[dependencies]
github-scbot-conf = { path = "../github_scbot_conf" }
github-scbot-crypto = { path = "../github_scbot_crypto" }
github-scbot-types = { path = "../github_scbot_types" }
github-scbot-utils = { path = "../github_scbot_utils" }
github-scbot-libs = { path = "../github_scbot_libs" }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
actix-rt = "1"
maplit = "1.0.2"
