[package]
name = "github-scbot-cli"
version = "0.22.0"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2021"

[dependencies]
github-scbot-ghapi = { path = "../github_scbot_ghapi" }
github-scbot-conf = { path = "../github_scbot_conf" }
github-scbot-database2 = { path = "../github_scbot_database2" }
github-scbot-logic = { path = "../github_scbot_logic" }
github-scbot-server = { path = "../github_scbot_server" }
github-scbot-tui = { path = "../github_scbot_tui" }
github-scbot-redis = { path = "../github_scbot_redis" }
github-scbot-sentry = { path = "../github_scbot_sentry" }
github-scbot-types = { path = "../github_scbot_types" }

actix-rt = "2"
async-trait = "0.1.50"
argh = "0.1.6"
dialoguer = "0.8.0"
owo-colors = "1.3.0"
tokio = { version = "1.17.0", features = ["full"] }
snafu = { version = "0.7.1", features = ["backtrace", "backtraces-impl-backtrace-crate"] }

[dev-dependencies]
indoc = "1.0.4"
