[package]
name = "github-scbot-conf"
version = "0.21.1"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2021"

[dependencies]
dotenv = "0.15"
github-scbot-crypto = { path = "../github_scbot_crypto" }
github-scbot-sentry = { path = "../github_scbot_sentry" }
thiserror = "1.0"
tracing = "0.1"
tracing-bunyan-formatter = "0.3.0"
tracing-error = "0.2.0"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.2.0"
