[package]
name = "github-scbot-database"
version = "0.1.0"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2018"

[dependencies]
github-scbot-conf = { path = "../github_scbot_conf" }
github-scbot-crypto = { path = "../github_scbot_crypto" }
github-scbot-types = { path = "../github_scbot_types" }
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "1.4"
openssl = "0.10"
r2d2 = "0.8"
r2d2-diesel = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
