[package]
name = "github-scbot-database"
version = "0.12.0"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2018"

[dependencies]
github-scbot-conf = { path = "../github_scbot_conf" }
github-scbot-crypto = { path = "../github_scbot_crypto" }
github-scbot-types = { path = "../github_scbot_types" }
github-scbot-utils = { path = "../github_scbot_utils" }
github-scbot-libs = { path = "../github_scbot_libs" }
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "1.4"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "0.6"
actix-rt = "1"
