[package]
name = "github-scbot-database"
version = "0.19.0"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2021"

[dependencies]
github-scbot-conf = { path = "../github_scbot_conf" }
github-scbot-crypto = { path = "../github_scbot_crypto" }
github-scbot-types = { path = "../github_scbot_types" }
github-scbot-utils = { path = "../github_scbot_utils" }
github-scbot-database-macros = { path = "../github_scbot_database_macros" }

async-trait = "0.1.50"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "1.4"
r2d2 = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smart-default = "0.6.0"
thiserror = "1.0"
tokio-diesel = { git = "https://github.com/mehcode/tokio-diesel", rev = "f4af42558246ab323600622ba8d08803d3c18842" }
tracing = "0.1"
derive_builder = "0.10.2"

[dev-dependencies]
pretty_assertions = "0.6"
actix-rt = "2"
